# DualcolonyACO

./: .gitignore  CMakeLists.txt  README.md
include/: Ant.h  ColonyManager.h  TrafficGraph.h
scripts/: fetch_ch150.py  fetch_kroa100.py  visualize_amnesia.py  visualize_ch150.py  visualize_ch150_scaled.py  visualize_gamma.py  visualize_journal.py  visualize_results.py  visualize_statistics.py  visualize_sweep.py
src/: Ant.cpp  ColonyManager.cpp  TrafficGraph.cpp  gamma_ablation.cpp  main.cpp  mmas_baseline.cpp
